--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "jwt"
 version = "0.3.0"
 authors = ["Christoph Parnitzke <christoph.parnitzke@tutamail.com>"]
 edition = "2018"
-description = "A JSON Web Token Decoder in Rust"
+description = "A JSON Web Token CLI Decoder in Rust"
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
