--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
-name = "jwt"
+name = "jwt-decode"
 version = "0.3.0"
 authors = ["Christoph Parnitzke <christoph.parnitzke@tutamail.com>"]
 edition = "2018"
 description = "A JSON Web Token CLI Decoder in Rust"
+readme = "README.md"
+repository = "https://github.com/Lazalatin/rust-jwt"
 license = "MIT"
+
+[[bin]]
+name = "jwt"
+path = "src/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
