--- a/.github/workflows/quickstart.yml
+++ b/.github/workflows/quickstart.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: Lazalatin/rust-jwt-decode@master
+      - uses: icepuma/rust-action@master
         with:
-          args: cargo fmt -- --check && cargo clippy -- -Dwarnings && cargo test
+          args: cargo test
